--- a/po/gmtkbabel.pot
+++ b/po/gmtkbabel.pot
@@ -1,6 +1,6 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR David Paleino <d.paleino@gmail.com>
-# This file is distributed under the same license as the PACKAGE package.
+# Copyright (C) 2010 David Paleino <d.paleino@gmail.com>
+# This file is distributed under the same license as the gmtkbabel package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
