--- a/README
+++ b/README
@@ -10,8 +10,8 @@ You need to install the following dependencies:
 * `Zenity <http://live.gnome.org/Zenity>`_; usually preinstalled with GNOME
 * `MTKBabel <http://www.rigacci.org/wiki/doku.php/doc/appunti/hardware/gps_logger_i_blue_747>`_; available in most distributions.
 
-Unpack the scripts in a suitable directory (e.g. ~/bin) and edit 
-the Configuration section, especially the PORT variable. 
+Then run "make" and, as root, "make install".
+Be sure to edit /etc/gmtkbabel.conf!
 
 License
 -------
@@ -19,4 +19,3 @@ License
 These scripts are relased under the 3-clause BSD license. 
 If you plan to distribute it and its dependencies, remember that both 
 mtkbabel and zenity are released under the GNU GPL.
-
