--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-gmtkbabel (0.1-1) UNRELEASED; urgency=low
+gmtkbabel (0.1-1) unstable; urgency=low
 
   * Initial release (Closes: #594476)
 
- -- David Paleino <dapal@debian.org>  Thu, 26 Aug 2010 11:53:34 +0200
+ -- David Paleino <dapal@debian.org>  Thu, 26 Aug 2010 12:58:03 +0200
