--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gmtkbabel (0.1-2) UNRELEASED; urgency=medium
+
+  * Trim trailing whitespace.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Wed, 15 Apr 2020 20:52:16 +0000
+
 gmtkbabel (0.1-1) unstable; urgency=low
 
   * Initial release (Closes: #594476)
