--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 gmtkbabel (0.1-2) UNRELEASED; urgency=medium
 
   * Trim trailing whitespace.
+  * Use versioned copyright format URI.
 
  -- Debian Janitor <janitor@jelmer.uk>  Wed, 15 Apr 2020 20:52:16 +0000
 
