--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ gmtkbabel (0.1-2) UNRELEASED; urgency=medium
 
   * Trim trailing whitespace.
   * Use versioned copyright format URI.
+  * Use secure URI in Homepage field.
 
  -- Debian Janitor <janitor@jelmer.uk>  Wed, 15 Apr 2020 20:52:16 +0000
 
