--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ gmtkbabel (0.1-2) UNRELEASED; urgency=medium
   * Trim trailing whitespace.
   * Use versioned copyright format URI.
   * Use secure URI in Homepage field.
+  * Bump debhelper from deprecated 7 to 12.
 
  -- Debian Janitor <janitor@jelmer.uk>  Wed, 15 Apr 2020 20:52:16 +0000
 
