--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ gmtkbabel (0.1-2) UNRELEASED; urgency=medium
   * Use versioned copyright format URI.
   * Use secure URI in Homepage field.
   * Bump debhelper from deprecated 7 to 12.
+  * Set debhelper-compat version in Build-Depends.
 
  -- Debian Janitor <janitor@jelmer.uk>  Wed, 15 Apr 2020 20:52:16 +0000
 
