--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ gmtkbabel (0.1-2) UNRELEASED; urgency=medium
   * Use secure URI in Homepage field.
   * Bump debhelper from deprecated 7 to 12.
   * Set debhelper-compat version in Build-Depends.
+  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
+    Repository-Browse.
 
  -- Debian Janitor <janitor@jelmer.uk>  Wed, 15 Apr 2020 20:52:16 +0000
 
