--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ gmtkbabel (0.1-2) UNRELEASED; urgency=medium
   * Set debhelper-compat version in Build-Depends.
   * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
     Repository-Browse.
+  * Use secure URI in Vcs control headers: Vcs-Browser, Vcs-Git.
 
  -- Debian Janitor <janitor@jelmer.uk>  Wed, 15 Apr 2020 20:52:16 +0000
 
