--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gmtkbabel (0.1-2) UNRELEASED; urgency=medium
+
+  * Remove constraints unnecessary since stretch:
+    + Build-Depends: Drop versioned constraint on debhelper.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Sun, 13 Jun 2021 20:34:53 -0000
+
 gmtkbabel (0.1-1) unstable; urgency=low
 
   * Initial release (Closes: #594476)
